tests/typescript/neg/arrays/arr-00.ts

/*@ foo :: ([number]) => number */
function foo(a) {  
  return a[0];
}

foo([]);
